# Interaction-Classification-using-Digit-ROS2

./: README.md
digit_description/: CMakeLists.txt  README.md  package.xml
digit_description/launch/: display.launch.py
digit_description/rviz/: urdf.rviz
digit_description/urdf/: digit_two.xacro
digit_description/urdf/sensors/: DFM_27UP006-ML.urdf.xacro  VLP-16.urdf.xacro  _d430.gazebo.xacro  _d430.urdf.xacro  _d435.gazebo.xacro  _d435.urdf.xacro
digit_msgs/: CMakeLists.txt  README.md  package.xml
digit_msgs/action/: Bow.action  EndEffectorMove.action  FistBump.action  Goto.action  Handshake.action  Lookfor.action  Move.action  OperationMode.action  Pick.action  Place.action  PointTo.action  ResetEnv.action  SearchAprilTag.action  Speak.action  Stand.action  StartServer.action  Turn.action  Wave.action
digit_msgs/msg/: DigitCommand.msg  DigitJoints.msg  DigitLimits.msg  DigitMotors.msg  DigitState.msg  MobilityParameters.msg
digit_msgs/srv/: GetLimits.srv
kogrob2/: package.xml  setup.cfg  setup.py
kogrob2/kogrob2/: class_interaction.py  features_extractor.py
kogrob2/launch/: task2_launch.py
kogrob2/params/: params.yaml
kogrob2/rviz/: config_task2.rviz
rosbags/: metadata.yaml
